--- a/install
+++ b/install
@@ -61,11 +61,17 @@ if [ "$ID" == "fedora" ]; then
   sudo dnf install -y lame\* --exclude=lame-devel
   sudo dnf install -y gstreamer1-plugins-{bad-\*,good-\*,base} gstreamer1-plugin-openh264 gstreamer1-libav --exclude=gstreamer1-plugins-bad-free-devel
   sudo dnf install -y tmux git wget zip unzip curl tigervnc openssh-askpass pinentry-gnome3 virt-manager flatpak gpg
-elif [ "$ID" == "debian" ]; then
-  log "Installing debian packages"
+elif [ "$ID" == "ubuntu" ]; then
+  log "Installing ubuntu packages"
 
   sudo apt update -y
-  sudo apt install -y vim-X11 tmux git wget zip unzip curl tigervnc-viewer ssh-askpass-gnome pinentry-gnome3 \
+  sudo apt purge -y snapd
+  sudo apt-mark hold snapd
+  sudo apt autoremove -y
+
+  sudo apt install -y libx11-dev libxinerama-dev libxft2-dev
+
+  sudo apt install -y tmux git wget zip unzip curl tigervnc-viewer ssh-askpass-gnome pinentry-gnome3 \
     virt-manager flatpak gpg
 fi
 
