--- a/install
+++ b/install
@@ -15,7 +15,7 @@ if [ -f /etc/os-release ]; then
   elif [ "$ID" == "fedora" ]; then
     log "This is a Fedora system."
   else
-    exit 1
+    exit
   fi
 fi
 
@@ -73,8 +73,8 @@ elif [ "$ID" == "ubuntu" ]; then
 
   if [ -e /usr/bin/i3 ]; then
     sudo apt install -y libx11-dev libxinerama-dev libxft2-dev \
-    xcompmgr hsetroot	brightnessctl acpi maim xclip xsel lxappearance gtk-chtheme \
-      libnotify-bin ncal lxpolkit pavucontrol
+      xcompmgr hsetroot	brightnessctl acpi maim xclip xsel lxappearance gtk-chtheme \
+      libnotify-bin ncal lxpolkit pavucontrol pulseaudio-utils
   fi
 
   sudo apt install -y build-essential tmux git wget zip unzip curl tigervnc-viewer ssh-askpass-gnome pinentry-gnome3 \
@@ -228,7 +228,7 @@ Section "InputClass"
   MatchIsKeyboard "on"
   Option "XkbLayout" "us,ru"
   Option "XkbModel" "pc105"
-  Option "XkbOptions" "grp:alt_shift_toggle,caps:ctrl_modifier"
+  Option "XkbOptions" "grp:ctrl_space_toggle,caps:ctrl_modifier"
 EndSection
 
 Section "InputClass"
