--- a/install
+++ b/install
@@ -44,6 +44,12 @@ ln -sf $HOME/dotfiles/.profile $HOME/
 ln -sf $HOME/dotfiles/.bash_profile $HOME/
 ln -sf $HOME/dotfiles/.bashrc $HOME/
 
+if [ -e /usr/bin/i3 ]; then
+  ln -snf $HOME/dotfiles/config/i3 $HOME/.config/
+  ln -snf $HOME/dotfiles/config/dunst $HOME/.config/
+  ln -sf $HOME/dotfiles/.Xresources $HOME/
+fi
+
 
 # Install packages for different OSes ───────────────────────────────────────────────────────────────────────────────────
 if [ "$ID" == "fedora" ]; then
@@ -55,6 +61,10 @@ if [ "$ID" == "fedora" ]; then
 
   sudo dnf group install c-development
 
+  if [ -e /usr/bin/i3 ]; then
+    sudo dnf install -y hsetroot xcompmgr xclip xsel libX11-devel libXft-devel libXinerama-devel
+  fi
+
   sudo dnf install -y lame\* --exclude=lame-devel
   sudo dnf install -y gstreamer1-plugins-{bad-\*,good-\*,base} gstreamer1-plugin-openh264 gstreamer1-libav --exclude=gstreamer1-plugins-bad-free-devel
   sudo dnf install -y tmux git wget zip unzip curl tigervnc openssh-askpass pinentry-gnome3 virt-manager gpg \
@@ -65,6 +75,12 @@ elif [ "$ID" == "ubuntu" ]; then
   sudo apt update -y
 
   sudo apt install -y build-essential tmux git wget zip unzip curl virt-manager gpg xclip xsel flatpak
+
+  if [ -e /usr/bin/i3 ]; then
+    sudo apt install -y libx11-dev libxinerama-dev libxft2-dev \
+      xcompmgr hsetroot	brightnessctl acpi maim xclip xsel lxappearance gtk-chtheme \
+      libnotify-bin ncal lxpolkit pavucontrol pulseaudio-utils
+  fi
 fi
 
 
@@ -86,13 +102,15 @@ fi
 
 # Install brew applications ─────────────────────────────────────────────────────────────────────────────────────────────
 log "Installing brew apps"
-brew install htop fzf keychain neovim nvimpager lazygit gh yq xq jq difftastic \
+brew install htop fzf keychain lazygit gh yq xq jq difftastic \
   kubectl k9s kubecolor krew \
   go golangci-lint-langserver gofumpt goimports go-task gopls \
   bash-language-server lua-language-server helm-ls \
   awk grep gnu-sed coreutils binutils findutils diffutils \
   eza fastfetch ncdu ugrep \
   bash bash-completion@2
+brew install neovim --head
+brew install nvimpager
 
 
 # Install golang applications ───────────────────────────────────────────────────────────────────────────────────────────
